@@ -1,10 +1,0 @@
-## Configuring the Font Maker backend module
-module.tx_srfreecap {
-	features.rewrittenPropertyMapper = 1
-	## Paths for backend templates
-	view {
-		templateRootPath = EXT:sr_freecap/Resources/Private/Backend/Templates/
-		partialRootPath = EXT:sr_freecap/Resources/Private/Partials/
-		layoutRootPath = EXT:sr_freecap/Resources/Private/Backend/Layouts/
-	}
-}
